--- a/home.html
+++ b/home.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-    <title>GFA1</title>
+    <title>FA1</title>
 </head>
 <body>
-    <div id="GFA" style="margin: 20px; font-size: 18px; font-family: Arial, sans-serif;"></div>
+    <div id="FA" style="margin: 20px; font-size: 18px; font-family: Arial, sans-serif;"></div>
     <script src="item1.js"></script>
     <script src="item2.js"></script>
     <script src="item3.js"></script>
