--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
     <title>FA1</title>
 </head>
 <body>
-    <div id="FA" style="margin: 20px; font-size: 18px; font-family: Arial, sans-serif;"></div>
+    <div id="GFA" style="margin: 20px; font-size: 18px; font-family: Arial, sans-serif;"></div>
     <script src="item1.js"></script>
     <script src="item2.js"></script>
     <script src="item3.js"></script>
