--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>FA1</title>
+    <title>Q3-FA1</title>
 </head>
 <body>
     <div id="GFA" style="margin: 20px; font-size: 18px; font-family: Arial, sans-serif;"></div>
